Actualización: Cantidad Waspe

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                         <h2>Waspe Strawberry Watermelon / MR.Blue / Grape Ice / Rainboy Candy</h2>
                         <p>Vaper cuádruple sabor fresa y sandía / mr.blue / uva / caramelo de colores de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 20€">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">2</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -598,7 +598,7 @@
                         <h2>Waspe Watermelon Ice / Strawberry Kiwi / Raspberry Watermelon / Lemon Lime</h2>
                         <p>Vaper cuádruple sabor sandía / fresa y kiwwi / frambuesa y sandía / lima limón de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">2</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -611,7 +611,7 @@
                         <h2>Waspe Blueberry Ice / Black Knight / Strawberry Ice / Strawberry Watermelon</h2>
                         <p>Vaper cuádruple sabor arándanos / caballero negro / fresa / fresa y sandía de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-g">8</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -624,7 +624,7 @@
                         <h2>Waspe Strawberry Raspberry Cherry / Crazy Cherry Ice / Cola Ice</h2>
                         <p>Vaper cuádruple sabor fresa, frambuesa y cereza / cereza loca / coca cola de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-m">5</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -637,7 +637,7 @@
                         <h2>Waspe Juicy Peach Ice / Tropical Fruit / Fruit Blast / Peach Berry</h2>
                         <p>Vaper cuádruple sabor melocotón jugoso / fruta tropical / explosión de frutas / melocotón y bayas de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">2</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -650,7 +650,7 @@
                         <h2>Waspe Redbull Ice / Banana Ice / Pineapple Coconut Ice / Triple Mango Ice</h2>
                         <p>Vaper cuádruple sabor redbull / plátano / piña y coco / triple de mangode 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">2</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -663,7 +663,7 @@
                         <h2>Waspe Strawberry Banana / Strawberry Red Bull / Strawberry Mango / Pink Lemonade</h2>
                         <p>Vaper cuádruple saborfresa y plátano / fresa y redbull / fresa y mango / limonada rosa de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">3</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
