--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     <div class="descripcion-waspe">
                         <h2>Waspe Strawberry Watermelon / MR.Blue / Grape Ice / Rainboy Candy</h2>
                         <p>Vaper cuádruple sabor fresa y sandía / mr.blue / uva / caramelo de colores de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 20€">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 20€<span>⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant-b">2</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
