--- a/index.html
+++ b/index.html
@@ -315,31 +315,37 @@
                     <span>Razzbar Strawberry Kiwi</span>
                     <span>15€</span>
                 </button>
-                <!-- <button class="product-razzbar" data-ventana-1="9">
-                    <img src="img/razzbar/razzbar9.png" alt="blackberry ice">
-                    <span>Razzbar Sour Apple</span>
-                    <span>15€</span>
-                </button> -->
+                <div class="agotado-razzbar">
+                    <button class="product-razzbar" data-ventana-1="9">
+                        <img src="img/razzbar/razzbar9.png" alt="blackberry ice">
+                        <span>Razzbar Sour Apple</span>
+                        <span>15€</span>
+                    </button>
+                </div>
                 <button class="product-razzbar" data-ventana-1="10">
                     <img src="img/razzbar/razzbar10.jpeg" alt="blackberry ice">
                     <span>Razzbar Strawberry Banana</span>
                     <span>15€</span>
                 </button>
-                <button class="product-razzbar" data-ventana-1="11">
-                    <img src="img/razzbar/razzbar11.png" alt="blackberry ice">
-                    <span>Razzbar Blue Razz Ice</span>
-                    <span>15€</span>
-                </button>
+                <div class="agotado-razzbar">
+                    <button class="product-razzbar" data-ventana-1="11">
+                        <img src="img/razzbar/razzbar11.png" alt="blackberry ice">
+                        <span>Razzbar Blue Razz Ice</span>
+                        <span>15€</span>
+                    </button>
+                </div>
                 <button class="product-razzbar" data-ventana-1="12">
                     <img src="img/razzbar/razzbar13.png" alt="blackberry ice">
                     <span>Razzbar Juicy Peach Ice</span>
                     <span>15€</span>
                 </button>
-                <button class="product-razzbar" data-ventana-1="13">
-                    <img src="img/razzbar/razzbar14.png" alt="blackberry ice">
-                    <span>Razzbar Watermelon Ice</span>
-                    <span>15€</span>
-                </button>
+                <div class="agotado-razzbar">
+                    <button class="product-razzbar" data-ventana-1="13">
+                        <img src="img/razzbar/razzbar14.png" alt="blackberry ice">
+                        <span>Razzbar Watermelon Ice</span>
+                        <span>15€</span>
+                    </button>
+                </div>
                 <button class="product-razzbar" data-ventana-1="14">
                     <img src="img/razzbar/razzbar16.png" alt="blackberry ice">
                     <span>Razzbar Blueberry Ice</span>
