--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                 </div>
                 <hr>
             </div>
+            <div class="agotado">
+                <p>AGOTADO</p>
+                <p>AGOTADO</p>
+                <p>AGOTADO</p>
+            </div>
             <div class="productos-bang">
                 <button class="product-bang" data-ventana="1">
                     <img src="img/bang/bang1.jpg" alt="bang watermelon ice / strawberry and mango">
@@ -280,11 +285,13 @@
                     <span>Razzbar Blackberry Ice</span>
                     <span>15€</span>
                 </button> -->
+                <div class="agotado-producto">
                     <button class="product-razzbar" data-ventana-1="2">
-                    <img src="img/razzbar/razzbar2.jpg" alt="blackberry ice">
-                    <span>Razzbar X3 Melon</span>
-                    <span>15€</span>
-                </button>
+                        <img src="img/razzbar/razzbar2.jpg" alt="blackberry ice">
+                        <span>Razzbar X3 Melon</span>
+                        <span>15€</span>
+                    </button>
+                </div>
                     <button class="product-razzbar" data-ventana-1="3">
                     <img src="img/razzbar/razzbar3.jpg" alt="blackberry ice">
                     <span>Razzbar Lemon Lime</span>
@@ -315,19 +322,17 @@
                     <span>Razzbar Strawberry Kiwi</span>
                     <span>15€</span>
                 </button>
-                <div class="agotado-razzbar">
-                    <button class="product-razzbar" data-ventana-1="9">
-                        <img src="img/razzbar/razzbar9.png" alt="blackberry ice">
-                        <span>Razzbar Sour Apple</span>
-                        <span>15€</span>
-                    </button>
-                </div>
+                <button class="product-razzbar" data-ventana-1="9">
+                    <img src="img/razzbar/razzbar9.png" alt="blackberry ice">
+                    <span>Razzbar Sour Apple</span>
+                    <span>15€</span>
+                </button>
                 <button class="product-razzbar" data-ventana-1="10">
                     <img src="img/razzbar/razzbar10.jpeg" alt="blackberry ice">
                     <span>Razzbar Strawberry Banana</span>
                     <span>15€</span>
                 </button>
-                <div class="agotado-razzbar">
+                <div class="agotado-producto">
                     <button class="product-razzbar" data-ventana-1="11">
                         <img src="img/razzbar/razzbar11.png" alt="blackberry ice">
                         <span>Razzbar Blue Razz Ice</span>
@@ -339,7 +344,7 @@
                     <span>Razzbar Juicy Peach Ice</span>
                     <span>15€</span>
                 </button>
-                <div class="agotado-razzbar">
+                <div class="agotado-producto">
                     <button class="product-razzbar" data-ventana-1="13">
                         <img src="img/razzbar/razzbar14.png" alt="blackberry ice">
                         <span>Razzbar Watermelon Ice</span>
@@ -353,7 +358,7 @@
                 </button>
             </div>
             <!-- Ventanas descriptivas 1 -->
-            <div class="ventana-1" data-ventana-1="1">
+            <!-- <div class="ventana-1" data-ventana-1="1">
                 <button class="cerrar-ventana">〤</button>
                 <div class="ventana-fondo-1">
                     <img src="img/razzbar/razzbar1.jpg" alt="razzbar">
@@ -365,7 +370,7 @@
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
-            </div>
+            </div> -->
             <div class="ventana-1" data-ventana-1="2">
                 <button class="cerrar-ventana">〤</button>
                 <div class="ventana-fondo-1">
@@ -387,7 +392,7 @@
                         <h2>Razzbar Lemon Lime</h2>
                         <p>Vaper individual sabor lima limón. de 30.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 15€. <span class="precio-s">⚠️SPAM EN IG -1€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">1</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -426,7 +431,7 @@
                         <h2>Razzbar Mixed Berries</h2>
                         <p>Vaper individual sabor bayas mixtas. de 30.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 15€. <span class="precio-s">⚠️SPAM EN IG -1€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">3</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -439,7 +444,7 @@
                         <h2>Razzbar Strawberry Watermelon</h2>
                         <p>Vaper individual sabor sandía y fresa. de 30.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 15€. <span class="precio-s">⚠️SPAM EN IG -1€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-g">6</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -452,7 +457,7 @@
                         <h2>Razzbar Strawberry Kiwi</h2>
                         <p>Vaper individual sabor fresa y kiwi. de 30.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 15€. <span class="precio-s">⚠️SPAM EN IG -1€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-g">12</span></p>
                     </div>
                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -465,7 +470,7 @@
                         <h2>Razzbar Sour Apple</h2>
                         <p>Vaper individual sabor manzana. de 30.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 15€. <span class="precio-s">⚠️SPAM EN IG -1€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-m">5</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -478,7 +483,7 @@
                         <h2>Razzbar Strawberry Banana</h2>
                         <p>Vaper individual sabor fresa y plátano. de 30.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 15€. <span class="precio-s">⚠️SPAM EN IG -1€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-m">4</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -504,7 +509,7 @@
                         <h2>Razzbar Juicy Peach Ice</h2>
                         <p>Vaper individual sabor melocotón. de 30.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 15€. <span class="precio-s">⚠️SPAM EN IG -1€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-m">4</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -530,7 +535,7 @@
                         <h2>Razzbar Blueberry Ice</h2>
                         <p>Vaper individual sabor arándano. de 30.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 15€. <span class="precio-s">⚠️SPAM EN IG -1€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">2 </span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -546,11 +551,13 @@
                 <hr>
             </div>
             <div class="productos-vopk">
-                <button class="product-vopk" data-ventana-2="1">
-                    <img src="img/vopk/vopk1.png" alt="vopk1">
-                    <span>Vopk Redbull Ice / Passion Fruit Kiwi Lime / Sour Apple Raspberry / Strawberry Watermelon Bubblegum</span>
-                    <span>18€</span>
-                </button>
+                <div class="agotado-producto">
+                    <button class="product-vopk" data-ventana-2="1">
+                        <img src="img/vopk/vopk1.png" alt="vopk1">
+                        <span>Vopk Redbull Ice / Passion Fruit Kiwi Lime / Sour Apple Raspberry / Strawberry Watermelon Bubblegum</span>
+                        <span>18€</span>
+                    </button>
+                </div>
                 <button class="product-vopk" data-ventana-2="2">
                     <img src="img/vopk/vopk2.png" alt="vopk1">
                     <span>Vopk Strawberry Watermelon / Cranberry Grapple / Mango Ice / Strawberry Raspberry Candy</span>
@@ -589,7 +596,7 @@
                         <h2>Vopk Strawberry Watermelon / Cranberry Grapple / Mango Ice / Strawberry Raspberry Candy</h2>
                         <p>Vaper cuádruple sabor sandía y fresa, arándano y uva, mango, caramelo de frambuesa y fresa. de 80.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">3</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -602,7 +609,7 @@
                         <h2>Vopk Blueberry Raspberry / Fuji Ice / Mixed berry / Bluberry Cocconut Candy</h2>
                         <p>Vaper cuádruple sabor arándano y frambuesa, fuji, frutos rojos mixtos, y cramelo de arándano y coco. de 80.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-m">4</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -615,7 +622,7 @@
                         <h2>Vopk Watermelon Ice / Triple Melon Ice / Blue Razz Ice / Strawberry Ice Cream</h2>
                         <p>Vaper cuádruple sabor sandía, triple melón, frambuesa azul y fresa. de 80.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
-                        <p>Quedan: <span class="cant">5</span></p>
+                        <p>Quedan: <span class="cant-b">2</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
