--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <hr>
             </div>
-            <div class="agotado">
+            <div class="agotado agotado-a">
                 <p>AGOTADO</p>
                 <p>AGOTADO</p>
                 <p>AGOTADO</p>
