Añadir productos waspe

--- a/index.html
+++ b/index.html
@@ -637,17 +637,14 @@
                 </div>
                 <hr>
             </div>
-            <div class="agotado">
-                <p>AGOTADO</p>
-                <p>AGOTADO</p>
-                <p>AGOTADO</p>
-            </div>
             <div class="productos-waspe">
-                <button class="product-waspe" data-ventana-3="1">
-                    <img src="img/waspe/waspe10.png" alt="Vaper redondo amarillo degradado rosa">
-                    <span>Waspe Strawberry Watermelon / MR.Blue / Grape Ice / Rainboy Candy</span>
-                    <span>20€</span>
+                <div class="agotado-producto">
+                    <button class="product-waspe" data-ventana-3="1">
+                        <img src="img/waspe/waspe10.png" alt="Vaper redondo amarillo degradado rosa">
+                        <span>Waspe Strawberry Watermelon / MR.Blue / Grape Ice / Rainboy Candy</span>
+                        <span>20€</span>
                 </button>
+                </div>
                 <button class="product-waspe" data-ventana-3="2">
                     <img src="img/waspe/waspe8.png" alt="Vaper redondo verde">
                     <span>Waspe Watermelon Ice / Strawberry Kiwi / Raspberry Watermelon / Lemon Lime</span>
@@ -668,14 +665,36 @@
                     <span>Waspe Juicy Peach Ice / Tropical Fruit / Fruit Blast / Peach Berry</span>
                     <span>20€</span>
                 </button>
-                <button class="product-waspe" data-ventana-3="6">
+                <div class="agotado-producto">
+                    <button class="product-waspe" data-ventana-3="6">
                     <img src="img/waspe/waspe13.png" alt="Vaper redondo naranja">
                     <span>Waspe Redbull Ice / Banana Ice / Pineapple Coconut Ice / Triple Mango Ice</span>
                     <span>20€</span>
                 </button>
+                </div>
                 <button class="product-waspe" data-ventana-3="7">
                     <img src="img/waspe/waspe1.png" alt="Vaper redondo amarillo">
                     <span>Waspe Strawberry Banana / Strawberry Red Bull / Strawberry Mango / Pink Lemonade</span>
+                    <span>20€</span>
+                </button>
+                <button class="product-waspe" data-ventana-3="8">
+                    <img src="img/waspe/waspe11.png" alt="Vaper redondo amarillo">
+                    <span>Waspe Strawberry Red bull / Strawberry Watermelon Bubblegum / Red Bull Ice / Cherry Cola Ice</span>
+                    <span>20€</span>
+                </button>
+                <button class="product-waspe" data-ventana-3="9">
+                    <img src="img/waspe/waspe6.png" alt="Vaper redondo amarillo">
+                    <span>Waspe Blueberry Raspberry / Blueberry Lemonade / Mixed Berries / Grape Honey Ice</span>
+                    <span>20€</span>
+                </button>
+                <button class="product-waspe" data-ventana-3="10">
+                    <img src="img/waspe/waspe4.png" alt="Vaper redondo amarillo">
+                    <span>Waspe Cherry Cola Ice / Strawberry Cherry Ice / Strawberry Cola Ice / Strawberry Watermelon Bubblegum</span>
+                    <span>20€</span>
+                </button>
+                <button class="product-waspe" data-ventana-3="11">
+                    <img src="img/waspe/waspe5.png" alt="Vaper redondo amarillo">
+                    <span>Waspe Graple Ice / Strawberry Kiwi / Strawberry Raspberry Cherry / Black Knight</span>
                     <span>20€</span>
                 </button>
             </div>
@@ -764,9 +783,61 @@
                     <img src="img/waspe/waspe1.png" alt="waspe">
                     <div class="descripcion-waspe">
                         <h2>Waspe Strawberry Banana / Strawberry Red Bull / Strawberry Mango / Pink Lemonade</h2>
-                        <p>Vaper cuádruple saborfresa y plátano / fresa y redbull / fresa y mango / limonada rosa de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p>Vaper cuádruple sabor fresa y plátano / fresa y redbull / fresa y mango / limonada rosa de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant-b">3</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
+                </div>
+            </div>
+            <div class="ventana-3" data-ventana-3="8">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe11.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Strawberry Red bull / Strawberry Watermelon Bubblegum / Red Bull Ice / Cherry Cola Ice</h2>
+                        <p>Vaper cuádruple sabor red bull de fresa / chicle de fresa y sandía / red bull helado / cola de cereza helado de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant-b">??</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
+                </div>
+            </div>
+            <div class="ventana-3" data-ventana-3="9">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe6.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Blueberry Raspberry / Blueberry Lemonade / Mixed Berries / Grape Honey Ice</h2>
+                        <p>Vaper cuádruple sabor Frambuesa y arándanos / limonada de arándanos / frutos rojos / helado de miel y uva de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant-b">??</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
+                </div>
+            </div>
+            <div class="ventana-3" data-ventana-3="10">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe4.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Cherry Cola Ice / Strawberry Cherry Ice / Strawberry Cola Ice / Strawberry Watermelon Bubblegum</h2>
+                        <p>Vaper cuádruple sabor Hielo de cola de cereza / Hielo de cereza de fresa / Hielo de cola de fresa / Chicle de fresa y sandía rosa de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant-b">??</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
+                </div>
+            </div>
+            <div class="ventana-3" data-ventana-3="11">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe5.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Graple Ice / Strawberry Kiwi / Strawberry Raspberry Cherry / Black Knight</h2>
+                        <p>Vaper cuádruple sabor Graple Ice / fresa kiwi / fresa frambuesa cereza / caballero negro rosa de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant-b">??</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
@@ -778,7 +849,7 @@
             <h2>Cuál plataforma prefieres contactar?</h2>
             <div class="contacto-multi">
                 <button class="comprar-whatsapp"><img src="img/redes/whatsapp-logo.png" alt="whatsapp-logo"> WhatsApp</button>
-                <button class="comprar-instagram"><img src="img/redes/instagram-logo.png" alt="instagram"> Instagram</button>
+                <button class="comprar-instagram"><img src="img/redes/instagram-logo.png" alt="instagram"> No disponible</button>
             </div>
         </div>
     </main>
