--- a/index.html
+++ b/index.html
@@ -279,6 +279,11 @@
                 </div>
                 <hr>
             </div>
+             <div class="agotado agotado-a">
+                <p>AGOTADO</p>
+                <p>AGOTADO</p>
+                <p>AGOTADO</p>
+            </div>
             <div class="productos-razzbar">
                 <!-- <button class="product-razzbar" data-ventana-1="1">
                     <img src="img/razzbar/razzbar1.jpg" alt="blackberry ice">
@@ -875,4 +880,5 @@
         <div class="copyright">© 2025 Web made by L3RightMC</div>
     </footer>
 </body>
+
 </html>
