--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VapersMadrid</title>
+    <link rel="icon" href="img/icons/icon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-productos.css">
     <link rel="stylesheet" href="css/style-responsive.css">
@@ -163,4 +164,5 @@
         <div class="copyright">© 2025 Web made by L3RightMC</div>
     </footer>
 </body>
+
 </html>
