--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VapersMadrid</title>
-    <link rel="icon" href="img/icons/icon.png">
+    <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-productos.css">
     <link rel="stylesheet" href="css/style-responsive.css">
@@ -166,3 +166,4 @@
 </body>
 
 </html>
+
