--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style-responsive.css">
     <link rel="stylesheet" href="css/style-ventana.css">
     <script src="js/script.js" defer></script>
-    <script type="module">
+    <script type="modle">
         // Firebase modular
         import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
@@ -50,6 +50,9 @@
 </script>
 </head>
 <body>
+    <div class="carga-fondo">
+        <div class="carga"></div>
+    </div>
     <video autoplay muted loop playsinline class="video-fondo"><source src="video/fondo.mp4" type="video/mp4"></video>
     <header>
         <nav class="headernav">
@@ -147,7 +150,7 @@
             <h2>Cuál plataforma prefieres contactar?</h2>
             <div class="contacto-multi">
                 <button class="comprar-whatsapp"><img src="img/redes/whatsapp-logo.png" alt="whatsapp-logo"> WhatsApp</button>
-                <button class="comprar-instagram"><img src="img/redes/instagram-logo.png" alt="instagram"> No disponible</button>
+                <button class="comprar-instagram"><img src="img/redes/instagram-logo.png" alt="instagram">Instagram</button>
             </div>
         </div>
     </main>
