--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style-responsive.css">
     <link rel="stylesheet" href="css/style-ventana.css">
     <script src="js/script.js" defer></script>
-    <script type="modle">
+    <script type="module">
         // Firebase modular
         import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
